fix layout problem

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  height: 100vh !important;
+  /* height: 100vh !important; */
 }
 
   .waybox-button {
